<resources>
    <string name="app_name">ParkHere</string>
    <!-- SignUp and Login Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="phone_num">Phone Number:</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first">First Name:</string>
...
