<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/animation_area"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginRight="20dp"
            android:id="@+id/listingDetail"
            android:src="@drawable/heart"
            android:layout_width="25dp"
            android:layout_height="25dp" />

        <ImageView
            android:id="@+id/edit"
            android:layout_marginRight="20dp"
            android:src="@drawable/share"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <ImageView
            android:id="@+id/cancel"
            android:src="@drawable/more"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

    </LinearLayout>

</RelativeLayout>