<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.daimajia.androidviewhover.BlurLayout
        android:id="@+id/listingBlurLayout"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:elevation="20dp">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/listingImageView"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            fresco:roundedCornerRadius="2dp"
            fresco:placeholderImageScaleType="centerCrop"
            android:adjustViewBounds="true"
            fresco:placeholderImage="@drawable/placeholder_parking_spot"/>

        <TextView
            android:id="@+id/listingTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listing_title_string"
            android:textColor="@color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentBottom="true"/>

    </com.daimajia.androidviewhover.BlurLayout>

</RelativeLayout>