...
            android:layout_height="wrap_content"
            android:id="@+id/buttonAuthorize"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>
        <Button
            android:text="Logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogout"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>

